--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ main {
 
 .main-left-desserts {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 40px 20px;
 }
 
