--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
     --f-red-hat-text: "Red Hat Text", serif;
     --dark-rose: hsl(14, 65%, 9%);
     --rose-500: hsl(12, 20%, 44%);
+    --rose-400: hsl(7, 20%, 60%);
+    --rose-300: hsl(14, 25%, 72%);
     --red: hsl(14, 86%, 42%);
 }
 
@@ -260,6 +262,12 @@ main {
 .main-right-cart-itself-ordered-desserts {
     display: flex;
     flex-direction: column;
+    row-gap: 10px;
+}
+
+.main-right-cart-itself-ordered-desserts-divider {
+    border: 0;
+    border-top: 1px solid var(--rose-300);
 }
 
 /* MAIN RIGHT CART ITSELF ORDERED DESSERT ITSELF */
@@ -301,6 +309,7 @@ main {
 .main-right-cart-itself-ordered-dessert-itself-left-bottom-price {
     color: var(--rose-500);
     font-weight: 400;
+    margin-left: 10px;
 }
 
 .main-right-cart-itself-ordered-dessert-itself-left-bottom-overall-price {
