--- a/styles.css
+++ b/styles.css
@@ -231,8 +231,7 @@ main {
 /* MAIN RIGHT CART EMPTY */
 
 .main-right-cart-empty {
-    /* display: flex; */
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     padding-block: 35px;
@@ -251,10 +250,14 @@ main {
 /* MAIN RIGHT CART ITSELF */
 
 .main-right-cart-itself {
-    display: flex;
+    display: none;
     flex-direction: column;
     row-gap: 20px;
     margin-top: 20px;
+}
+
+.main-right-cart-itself-active {
+    display: flex;
 }
 
 /* MAIN RIGHT CART ITSELF ORDERED DESSERTS */
